--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   openstream:
-    build: .
+    image: ghcr.io/winky2000/openstream:latest
+    pull_policy: always
     ports:
       - "3070:3070"
     environment:
@@ -8,7 +9,7 @@ services:
       - PORT=3070
       - HOSTNAME=0.0.0.0
       - OPENSTREAM_DATA_PATH=/app/data/openstream.json
-      - OPENSTREAM_PUBLIC_BASE_URL=https://openstream.winkys.com
+      - OPENSTREAM_PUBLIC_BASE_URL=https://openstream.example.com
       # Optional: poster carousel speed (seconds per full loop). Default is 55.
       # - NEXT_PUBLIC_OPENSTREAM_POSTER_MARQUEE_SECONDS=55
     volumes:
