--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - HOSTNAME=0.0.0.0
       - OPENSTREAM_DATA_PATH=/app/data/openstream.json
       - OPENSTREAM_PUBLIC_BASE_URL=https://openstream.example.com
+      # Recommended: set a stable secret so sessions survive container recreates.
+      # Put it in a local .env file (see .env.example).
+      - OPENSTREAM_SESSION_SECRET=${OPENSTREAM_SESSION_SECRET}
       # Optional: poster carousel speed (seconds per full loop). Default is 55.
       # - NEXT_PUBLIC_OPENSTREAM_POSTER_MARQUEE_SECONDS=55
     volumes:
